--- a/create.html
+++ b/create.html
@@ -41,7 +41,7 @@
 
     </nav>
     <!--result section here-->
-    <div class=" w-96 items-center rounded-md border-2 pb-8 md:px-10 grid place-content-center">
+    <div class=" w-96 items-center rounded-md border-2 pb-8 md:px-10 grid place-content-center md:mt-10 text-white">
         <P class="text-2xl font-semibold text-cyan-500 text-center">Create account</P><hr class="mb-5">
          
    
