--- a/Question.html
+++ b/Question.html
@@ -64,8 +64,8 @@
               </div>
               
             </div><hr class="my-7">
-            <div class="mt-7 flex justify-around"><button class="bg-yellow-700 px-4 hover:bg-cyan-400 md:px-6 rounded-lg"> previus</button>
-              <button class="md:px-6 rounded-lg bg-pink-500 px-4 hover:bg-cyan-400"> conferm</button>
+            <div class="mt-7 flex justify-around"><button class="bg-yellow-700 px-4 hover:bg-cyan-400 md:px-6 rounded-lg"> previous</button>
+              <button class="md:px-6 rounded-lg bg-pink-500 px-4 hover:bg-cyan-400"> confirm</button>
               <button class="bg-yellow-700 px-4 md:px-6 rounded-lg hover:bg-cyan-400">next</button>
             </div>
           </div>
